[package]
name = "coremidi-sys"
version = "1.0.0"
authors = ["Jonas Klesy"]
description = "Low-level bindings for the coreMIDI framework"
license = "MIT"
homepage = "https://github.com/jonas-k/coremidi-sys"


[dependencies]
core-foundation-sys = "0.2"
core-foundation = "0.2"
libc = "0.2"
time = "0.1"
